working on pace

--- a/mobile/src/main/res/layout/activity_main.xml
+++ b/mobile/src/main/res/layout/activity_main.xml
@@ -1,18 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="@dimen/activity_horizontal_margin"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <TableRow
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="wrap_content"
+        >
+        <TextView
+            android:text="Welcome to Rkoi2318_h3. \nClick on the buttons below to preview the features"
+            android:padding="20dip"
+            android:textAlignment="viewStart"
+            android:layout_height="100dp"
+            android:layout_column="1"
+            android:id="@+id/welcomeText"
+            />
+    </TableRow>
+    <!--Pace calculator button-->
+    <TableRow>
 
-</android.support.constraint.ConstraintLayout>
+        <Button
+            android:id="@+id/btnPaceCalc"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_column="1"
+            android:onClick="LaunchPaceCaclulator"
+            app:layout_constraintEnd_toEndOf="parent"
+
+            android:text="Launch Pace Calculator" />
+    </TableRow>
+    <!--Running Log Button-->
+    <TableRow>
+        <Button
+            android:id="@+id/btnRunninLog"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_column="1"
+            android:onClick="LaunchRunningLog"
+            android:text="View Running Log"
+            />
+    </TableRow>
+
+    <!--Launch a Music player-->
+    <TableRow>
+        <Button
+            android:id="@+id/btnMusicPlayer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:onClick="LaunchMusicPlayer"
+            android:layout_column="1"
+            android:text="Launch Music Player"
+            />
+    </TableRow>
+
+    <!--Launch a Mobile Pedometer player-->
+    <TableRow>
+        <Button
+            android:id="@+id/btnPedometer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_column="1"
+            android:onClick="LaunchPedometer"
+            android:text="Launch Mobile Pedometer"
+            />
+    </TableRow>
+</TableLayout>
