--- a/mobile/src/main/res/values/dimens.xml
+++ b/mobile/src/main/res/values/dimens.xml
@@ -1,3 +1,8 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="PERCENT_5">5%</dimen>
+    <dimen name="PERCENT_10">10%</dimen>
+    <dimen name="PERCENT_35">35%</dimen>
+    <dimen name="PERCENT_30">30%</dimen>
+    <dimen name="PERCENT_80">80%</dimen>
 </resources>
