--- a/mobile/src/main/res/layout/running_log.xml
+++ b/mobile/src/main/res/layout/running_log.xml
@@ -26,6 +26,7 @@
         android:layout_marginStart="128dp"
         android:layout_marginTop="8dp"
         android:text="Add New Entry"
+        android:onClick="createNewRun"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
